# codebase

./: .bazelrc  .deepsource.toml  .eslintrc.js  .eslintrc.json  .flowconfig  .gitbook.yaml  .gitignore  .graphqlconfig  .graphqlrc.yaml  .prettierrc  .prettierrc.config.js  .tags  BUILD  BUILD.bazel  Cargo.toml  README.md  SUMMARY.md  Tiltfile  WORKSPACE  bazel-bin  bazel-codebase  bazel-out  bazel-testlogs  bazel.Tiltfile  cargo_bazel_lock.json  deps.Tiltfile  dev.Tiltfile  docker-compose.ci.yaml  go.mod  go.sum  go_repositories.bzl  helpers.Tiltfile  jest.config.js  package.json  pipeline.yaml  project.garden.yaml  relay.config.js  repositories.bzl  streamlinehq.json  test.yam;  (+3 more)
applications/buffer/: .env.ci  .env.example  BUILD.bazel  docker-compose.ci.yaml  docker-compose.e2e.yaml  docker-compose.yaml  main.go  pipeline.yaml
applications/buffer/.ci/: docker-compose.yaml  pipeline.yaml
applications/buffer/internal/: BUILD.bazel  main.go
applications/eva/: .env.ci  .env.example  BUILD.bazel  config.toml  docker-compose.ci.e2e.yaml  docker-compose.ci.yaml  docker-compose.yaml  garden.yaml  gqlgen.yml  main.go  pipeline.yaml  start.go
applications/eva/.ci/: docker-compose.yaml  pipeline.yaml
applications/eva/database/: __init__.cql
applications/hades/: .env.ci  .env.example  BUILD  BUILD.bazel  config.toml  docker-compose.ci.e2e.yaml  docker-compose.ci.yaml  go.mod  gqlgen.yml  main.go  pipeline.yaml  queries.json  server.go  start.go
applications/indigo/: .env.example  BUILD.bazel  main.go
applications/medusa/: .babelrc  .dockerignore  .env  .env.ci  .env.example  .env.local  .eslintrc  .eslintrc.json  .graphqlconfig  BUILD  BUILD.bazel  Dockerfile  cypress.ci.json  cypress.example.json  cypress.json  docker-compose.ci.e2e.yaml  docker-compose.ci.yaml  docker-compose.e2e.yaml  get-graphql-schema.js  index.html  jest.bzl  jest.config.js  jest.setup.js  lingui.config.ts  locales.config.js  next.config.js  package.json  pipeline.yaml  push-all-queries.js  push-queries.js  razzle.config.js  relay-local-persisting.js  relay.config.js  reporter.js  run_yarn_install.sh  sentry.client.config.ts  sentry.server.config.ts  server.js  tsconfig.eslint.json  tsconfig.json  (+1 more)
applications/orca/: .env.ci  .env.example  BUILD.bazel  BUILD.rust.bazel  Cargo.toml  apollo-gateway.ts  dev.router.yaml  docker-compose.ci.e2e.yaml  notes.md  package.json  pipeline.yaml  relay.graphql  router.yaml  supergraph.yaml  supergraph_compose.sh  tsconfig.json
applications/parley/: .env.ci  .env.example  BUILD.bazel  config.toml  docker-compose.ci.e2e.yaml  docker-compose.ci.yaml  main.go  pipeline.yaml
applications/pox/: .env.example  BUILD.bazel  main.go
applications/sting/: .env.ci  .env.example  BUILD.bazel  config.toml  docker-compose.ci.e2e.yaml  docker-compose.ci.yaml  gqlgen.yml  main.go  pipeline.yaml
deployments/: BUILD  BUILD.bazel  cert-manager  cert-manager.yaml  clusterrole.yaml  example-go-service.yaml  example-ingress.yaml  example-node.yaml  ingress.yaml  k3d.sh  role.yaml
deployments/eva/: eva-service.yaml
deployments/hades/: BUILD  BUILD.bazel  hades-deployment.yaml  hades-service.yaml  hades.yaml
deployments/medusa/: BUILD  BUILD.bazel  medusa-service.yaml
deployments/scylla/: BUILD.bazel  scylla-config.yaml  scylla-svc.yaml
deployments/ssl/: BUILD.bazel  myCA.key  myCA.pem  myCA.srl  overdoll-tls.yaml  overdoll.ext  overdoll.test.crt  overdoll.test.csr  overdoll.test.key  projecth-tls.yaml  projecth.ext  projecth.test.crt  projecth.test.csr  projecth.test.key
deployments/users/: deployment.yaml
development/: BUILD.bazel  dsvc.Tiltfile  helpers.Tiltfile  local_env.md  local_env.txt  modules.garden.yaml
development/caddy/: Caddyfile  caddy.dockerfile  deploy.yaml
development/certs/: certificate.yaml  issuer.yaml
development/elastic/: elasticsearch.yaml
development/kafka/: persistent.yaml
development/local/: create-cluster.sh  kind.yaml  temporal.yaml
development/localhost-certs/: CA.key  CA.pem  CA.srl  localhost.crt  localhost.csr  localhost.decrypted.key  localhost.key
development/minio/: minio.yaml
development/redis/: values.yaml
development/schemas/: apollo-router-schema.json
development/scripts/: create-cluster.sh
development/scylla/: BUILD.bazel  cluster.yaml  role.yaml  scylla-config.yaml  scylla-operator.yaml
development/service/: Chart.yaml
development/services/: buffer.yaml  carrier.yaml  eva.yaml  hades.yaml  loader.yaml  medusa.yaml  orca.yaml  parley.yaml  puppy.yaml  ringer.yaml  stella.yaml  sting.yaml
development/temporal/: values.yaml
development/traefik/: BUILD.bazel  ingress.yaml  values.yaml
libraries/aws/: BUILD.bazel  aws.go
libraries/bootstrap/: BUILD.bazel  aws.go  bootstrap.go  cassandra_query_observer.go  database.go  elasticsearch.go  grpc.go  http.go  redis.go  worker.go
libraries/cache/: BUILD.bazel  alias.go  cache.go  create.go  delete_index.go  index.go  list.go  local_alias.go  register.go  registry.go  reindex.go  swap.go
libraries/client/: BUILD.bazel  eva.go
libraries/clients/: BUILD.bazel  base.go  carrier.go  default_grpc_dial_options.go  eva.go  hades.go  http.go  loader.go  media_callback.go  parley.go  posthog_client.go  resource_callback.go  ringer.go  stella.go  sting.go  sting_callback.go  temporal.go
libraries/commands/: BUILD.bazel  db.go  main.go  migrate.go  seed.go
libraries/common/: BUILD.bazel  connection.go  eva_grpc.go  mocks.go  services.go  user.go
libraries/config/: BUILD.bazel  config.go
libraries/cookies/: BUILD.bazel  cookies.go  cookies_test.go
libraries/database/: BUILD.bazel  config.go  db.go  migrate.go  scan.go  seed.go
libraries/elasticsearch/: BUILD.bazel  bulk.go  connection.go  index.go  search.go
libraries/graphql/: BUILD.bazel  Long.go  URI.go  currency.go  dataloader.go  date.go  directives.go  locale.go  media.go  new.go  passport.go  preloads.go  resource.go  schema.graphql  standard_gqlgen.yml  types.go  uri.go
libraries/helpers/: BUILD.bazel  debug.go  directory.go  get_ip.go  gin.go  preloads.go  struct_name.go
(+11862 files in other folders)
