load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "objects",
    objects = [
        "//development/services/hades:objects",
        "//development/services/medusa:objects",
        "//development/services/eva:objects",
        "//development/scylla:objects",
        "//development/traefik:ingress",
    ],
)
