load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

web_sources = [
    ".env",
]

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    data = web_sources,
    importpath = "overdoll/applications/buffer",
    visibility = ["//visibility:private"],
    deps = [
        "//applications/buffer/src/server:go_default_library",
        "//applications/buffer/src/service:go_default_library",
        "//applications/eva/src/ports:go_default_library",
        "//libraries/aws:go_default_library",
        "//libraries/bootstrap:go_default_library",
        "//libraries/middleware:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_tus_tusd//pkg/handler:go_default_library",
        "@com_github_tus_tusd//pkg/s3store:go_default_library",
    ],
)

go_binary(
    name = "buffer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "buffer-image",
    base = "@go_base_image//image",
    data = web_sources,
    embed = [":go_default_library"],
    importpath = "overdoll/applications/buffer",
)
