load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

package(default_visibility = ["//visibility:public"])

web_sources = [
    ".env",
    "queries.json",
]

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "start.go",
    ],
    data = web_sources,
    importpath = "project01101000/codebase/applications/hades",
    deps = [
        "//applications/hades/src:go_default_library",
        "//applications/hades/src/directives:go_default_library",
        "//applications/hades/src/extensions:go_default_library",
        "//applications/hades/src/middleware:go_default_library",
        "//applications/hades/src/resolvers:go_default_library",
        "//applications/hades/src/services:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler/extension:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler/lru:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler/transport:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_gomodule_redigo//redis:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_joho_godotenv//:go_default_library",
    ],
)

go_image(
    name = "hades-image",
    base = "@go_base_image//image",
    data = web_sources,
    embed = [":go_default_library"],
    importpath = "project01101000/codebase/applications/hades",
)

go_binary(
    name = "hades",
    embed = [":go_default_library"],
    importpath = "project01101000/codebase/applications/hades",
)
