load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

package(default_visibility = ["//visibility:public"])

web_sources = [
    ".env",
    "queries.json",
]

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    data = web_sources,
    importpath = "overdoll/applications/hades",
    deps = [
        "//applications/eva/proto:v1_go_proto",
        "//applications/hades/src/ports:go_default_library",
        "//libraries/bootstrap:go_default_library",
        "//libraries/rabbit:go_default_library",
        "//libraries/search:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler/extension:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler/lru:go_default_library",
        "@com_github_99designs_gqlgen//graphql/handler/transport:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_gomodule_redigo//redis:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)

go_image(
    name = "hades-image",
    base = "@go_base_image//image",
    data = web_sources,
    embed = [":go_default_library"],
    importpath = "overdoll/applications/hades",
)

go_binary(
    name = "hades",
    embed = [":go_default_library"],
    importpath = "overdoll/applications/hades",
)
