load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "overdoll/applications/indigo",
    visibility = ["//visibility:private"],
    deps = [
        "//applications/indigo/src/server:go_default_library",
        "//libraries/bootstrap:go_default_library",
        "//libraries/events:go_default_library",
        "@com_github_elastic_go_elasticsearch_v7//:go_default_library",
    ],
)

go_binary(
    name = "indigo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
