load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@npm_orca//@bazel/typescript:index.bzl", "ts_project")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "package.json",
    "tsconfig.json",
])

_DEPS = [
    "@npm_orca//@apollo/gateway",
    "@npm_orca//apollo-server",
    "@npm_orca//@apollo/core-schema",
    "@npm_orca//apollo-server-express",
    "@npm_orca//@apollo/federation",
    "@npm_orca//express",
    "@npm_orca//graphql",
    "@npm_orca//body-parser",
    "@npm_orca//ioredis",
    "@npm_orca//dotenv",
    "@npm_orca//@types/node",
    "@npm_orca//node-fetch",
    "@npm_orca//cors",
]

_DATA = [
    "schema/schema.graphql",
    "tsconfig.json",
]

_SRCS = [
    "apollo-gateway.ts",
]

ts_project(
    name = "internal_lib",
    srcs = _SRCS,
    data = _DATA + glob([".*"]),
    tsconfig = "tsconfig.json",
    deps = _DEPS,
)

nodejs_binary(
    name = "internal",
    data = ["internal_lib"],
    entry_point = "apollo-gateway.js",
)

nodejs_image(
    name = "image",
    binary = ":internal",
)

container_push(
    name = "publish",
    format = "Docker",
    image = ":image",
    registry = "$(CONTAINER_REGISTRY)",
    repository = "orca/dev",
    tag = "$(CONTAINER_TAG)",
)
