load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

_PROC_MACRO_DEPS = [
    "@crates//:async-trait",
]

_DEPS = [
    "@crates//:anyhow",
    "@crates//:apollo-router",
    "@crates//:futures",
    "@crates//:schemars",
    "@crates//:serde",
    "@crates//:serde_json",
    "@crates//:tokio",
    "@crates//:tower",
    "@crates//:dotenv",
    "@crates//:redis",
    "@crates//:http",
    "@crates//:r2d2",
    "@crates//:sentry",
]

_DATA = [
    "schema/schema.graphql",
    "router.yaml",
]

_SRCS = glob(["src/**/*.rs"])

rust_binary(
    name = "internal",
    srcs = _SRCS,
    data = _DATA,
    proc_macro_deps = _PROC_MACRO_DEPS,
    deps = _DEPS,
)

default_env = {
    "APOLLO_ROUTER_SUPERGRAPH_PATH": "applications/orca/schema/schema.graphql",
    "APOLLO_ROUTER_CONFIG_PATH": "applications/orca/router.yaml",
    "APOLLO_TELEMETRY_DISABLED": "1",
}

rust_image(
    name = "local-image",
    srcs = _SRCS,
    base = "@rust_base_image//image",
    data = _DATA + [
        ".env",
    ],
    env = default_env,
    proc_macro_deps = _PROC_MACRO_DEPS,
    deps = _DEPS,
)

rust_image(
    name = "image",
    srcs = _SRCS,
    base = "@rust_base_image//image",
    data = _DATA,
    env = default_env,
    proc_macro_deps = _PROC_MACRO_DEPS,
    deps = _DEPS,
)

container_push(
    name = "publish-testing",
    format = "Docker",
    image = ":image",
    registry = "$(CONTAINER_REGISTRY)",
    repository = "orca/dev",
    tag = "$(CONTAINER_TAG)",
)

container_push(
    name = "publish",
    format = "Docker",
    image = ":image",
    registry = "$(CONTAINER_REGISTRY)",
    repository = "orca",
    skip_unchanged_digest = True,
    tag = "$(CONTAINER_TAG)",
)
