[package]
name = "orca"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
# Note if you update these dependencies then also update xtask/Cargo.toml
apollo-router = "1.2.0"
async-trait = "0.1.52"
futures = "0.3.21"
schemars = "0.8.10"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.24.2", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
dotenv = "0.15.0"
redis = { version = "0.21.5", features = ["tokio-comp", "r2d2"] }
http = "0.2"
r2d2 = { version = "0.8.8" }
sentry = "0.27.0"
