load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "parley_lib",
    srcs = ["main.go"],
    importpath = "overdoll/applications/parley",
    visibility = ["//visibility:private"],
    deps = [
        "//applications/parley/src/ports",
        "//applications/parley/src/service",
        "//libraries/bootstrap",
        "//libraries/commands",
        "//libraries/config",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "parley",
    embed = [":parley_lib"],
    visibility = ["//visibility:public"],
)
